stylesheet.css
body {
    padding:0;
    margin: 0;
    border : 0;
    color: rgba(36, 21, 133, 1);
    font-family: "Noto Sans", sans-serif;
    text-align:center;
}

#container{
    background-repeat: no-repeat;
    background-size:cover;
}

h1 {
    padding:0;
    margin: 0;
    border:0;
}
#top-main{
    padding:0;
    margin: 0;
    border : 0;
    width:100%;
    color:rgba(250, 250, 250, 1);
    font-size: 375%;
    text-align:center;
    background-color: rgba(40,54,92,.8);
}

#page-break{
    height:2%;
    background-color:rgba(165, 220, 241, .7);
}

#bottom-main{
    width:100%;
    height:74%;
    font-size:170%;
    background-color: rgba(217, 231, 249, .92);
	margin-top:0;
}

#compare{
	width:9%;
	height:9%;
	font-size:75%;
    border-color: rgba(36, 21, 133, 1);
    border-width:4px;
    font-family: "Noto Sans", sans-serif;
    color:F9F8F8;
    background-color: rgba(112, 118, 207, 1);
}

#compare:hover{
    background-color: rgba(131, 152, 222, 1);
    cursor:pointer;
}


form{ 
	width:35%;
	display: table;
	margin-left:auto;
	margin-right:auto;
}

p{
	display: table-row;  
}

label{ 
	display: table-cell; 
	text-align:left;

}

input{ 
	display: inline-block;
	vertical-align:middle;
}

.addresses{
	width:110%;
	
}

.requests{
	font-size: 110%;
}

table, th, td{
	border: 1px solid black;
}

td{
	text-align:right;
	font-size: 150%;
}

th{
	font-size: 175%;
	padding-left: auto;
	padding-right:auto;
}

#table{
	width: 38%;
	margin-left:auto;
	margin-right:auto;
	visibility:hidden;
	border-collapse:collapse;
}

#message{
	text-align:center;
	font-size:120%;
}

